feat!(ui): tabler ui kit instead of bootstrap (#1)
* changes from previous PR

* missed `$toughbyte-black` color

* update id in test

* fix(tabler): Icon/IconButton/Button with icon styles adapted for a tabler (#3)

* icon sizes as number -> icon sizes as css

* remove `empty-avatar-icon` css class

* reassign button migration to button component

* stroke-width: 1.25 as default for the `.icon` class

* pipeline buttons correct size

* fix position_html_status_circle

* rubocoped

* temporary back size assignment for button component slots

* fix(ui): tabler line height for body set to 1.5 (#32)

* fix(ui): tabler icons after testing (#62)

* notes chevron

* tables/accordions icon scaling

* correct color for draft position icon

* blacklisted candidate name with icon

* copy to clipboard popover button size fixed

* card empty text with icon centered

* large icon size for positions header

* redundant space

* fix(ui): use white background color for tabler accordions (#75)

* fix(ui): all avatars use `avatar` class and correct sizes (#42)

* avatars update everywhere

* fix avataroverlay

* feat(ui): new cancel button style (#77)

* new cancel button styles

* confirmations modal

* Updated color and padding for ats interface (#86)

* fix(ui): pipeline styles adapted to a tabler (#83)

* badges

* pipeline columns

* desktop pipeline navigation

* pipeline placements navigation

finalized desktop and mobile

* fix(style): Returned .text-input-component-disabled style (#85)

* fix(style): Changed footer text style (#93)

* Changed footer text style

* fix: colors on main block

* Restored selectize colors

* fix(ui): adapt navbar (#98)

* Fix tasks counter badge style

* Set spacing between elements

* Fixed jumping navbar when toggle dropdown on mobile display

* Fixed highlighting active nav in desktop

* Applied highlighting active nav in mobile

* Added color for div

--- a/app/assets/stylesheets/entrypoints/ats.scss
+++ b/app/assets/stylesheets/entrypoints/ats.scss
@@ -4,10 +4,10 @@ $font-family-sans-serif: "Open Sans", Arial, Helvetica, sans-serif;
 @import "jquery-ui/themes/base/theme";
 @import "jquery-ui/themes/base/datepicker";
 
-// Bootstrap
+// Tabler
+@import "@tabler/core/src/scss/tabler";
 @import "../src/shared/variables";
 @import "../src/shared/colors";
-@import "bootstrap/scss/bootstrap";
 @import "tributejs/dist/tribute";
 
 @import "../src/shared/scaffolds";
@@ -21,7 +21,6 @@ $font-family-sans-serif: "Open Sans", Arial, Helvetica, sans-serif;
 
 @import "../src/ats/main";
 @import "../src/ats/positions";
-@import "../src/ats/candidates";
 @import "../src/ats/task";
 @import "../src/ats/quick_search";
 @import "../src/ats/recaptcha";
