--- a/app/assets/stylesheets/src/lookbook/_scaffolds.scss
+++ b/app/assets/stylesheets/src/lookbook/_scaffolds.scss
@@ -7,3 +7,9 @@
 .code-green {
   color: $green;
 }
+
+.col-form-label-sm {
+  font-size: 0.875rem;
+  padding-top: calc(0.25rem + var(--tblr-border-width));
+  padding-bottom: calc(0.25rem + var(--tblr-border-width));
+}
