--- a/app/assets/stylesheets/src/shared/_colors.scss
+++ b/app/assets/stylesheets/src/shared/_colors.scss
@@ -1,7 +1,4 @@
-@import "bootstrap/scss/functions";
-
-$navbar-text: #e8e8e8;
-
+$toughbyte-black: #000000;
 $github-black: #24292e;
 $linkedin-blue: #006691;
 $facebook-blue: #4267b2;
@@ -12,30 +9,3 @@ $vk-blue: #4a76a8;
 $skype-color: #00aef3;
 $telegram-color: #1f97c9;
 $hh-red: #d6001c;
-
-// Redefining default Bootstrap theme colors.
-$blue: #1c6dd0;
-$gray-100: #f8f9fa;
-$gray-200: #e9ecef;
-$gray-300: #dee2e6;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-600: #6c757d;
-$gray-700: #495057;
-$gray-800: #343a40;
-$gray-900: #212529;
-
-@import "bootstrap/scss/variables";
-
-// Other colors.
-$accordion-border-color: $gray-500;
-$border-color: $gray-500;
-$card-border-color: $gray-500;
-$dropdown-border-color: $gray-500;
-$list-group-border-color: $gray-500;
-$modal-content-border-color: $gray-500;
-$navbar-bg: $gray-900;
-$nav-tabs-border-color: $gray-500;
-$pagination-border-color: $gray-500;
-$popover-border-color: $gray-500;
-$toast-border-color: $gray-500;
