--- a/app/views/ats/tasks/_tab_counter.html.slim
+++ b/app/views/ats/tasks/_tab_counter.html.slim
@@ -3,4 +3,4 @@
 span.turbo_tab_tasks_counter
   - if pending_tasks_count.positive?
     | &nbsp;
-    span.badge.bg-secondary = pending_tasks_count
+    span.badge = pending_tasks_count
