--- a/app/views/layouts/ats/profile.html.slim
+++ b/app/views/layouts/ats/profile.html.slim
@@ -6,10 +6,8 @@
         = yield :header
 
       - if content_for?(:tab_list)
-        section#tab-list.row.mt-2
-          .col
-            ul.nav.nav-tabs
-              = yield :tab_list
+        section#tab-list.mt-2
+          = yield :tab_list
 
       section#tab-content.tab-content
         .tab-pane.active
