--- a/app/views/ats/positions/activities_tab.html.slim
+++ b/app/views/ats/positions/activities_tab.html.slim
@@ -1,5 +1,5 @@
 = render "ats/positions/profile"
-  ul.list-group.col-12.col-lg-7.col-xl-8.mt-3.text-break
+  ul.list-group.col-12.col-lg-7.col-xl-8.mt-3.text-break.bg-white
     - @activities.each do |event|
       li.list-group-item
         span.fw-light.me-2
