--- a/app/assets/stylesheets/src/ats/_main.scss
+++ b/app/assets/stylesheets/src/ats/_main.scss
@@ -1,83 +1,5 @@
-#email-threads {
-  .folding-ellipsis {
-    @extend .rounded;
-    background-color: lightgrey;
-    padding: 0 5px 0 5px;
-    cursor: pointer;
-
-    &:hover {
-      background-color: #e4e4e4;
-    }
-  }
-
-  .compose-folding-ellipsis {
-    @extend .folding-ellipsis;
-  }
-
-  .email-body {
-    padding-top: 0;
-    word-break: break-word;
-
-    .container {
-      width: auto;
-      padding-left: 0;
-      padding-right: 0;
-      margin-left: 0;
-      margin-right: 0;
-    }
-
-    div:not(.email-header) {
-      max-width: 100%;
-    }
-
-    table {
-      table-layout: fixed;
-    }
-
-    .list-group-item-action {
-      border-top: 1px solid $gray-500 !important;
-      border-bottom-right-radius: 4px;
-      border-bottom-left-radius: 4px;
-    }
-
-    .list-group-item {
-      border: none;
-      border-bottom-right-radius: 4px;
-      border-bottom-left-radius: 4px;
-      &:not(:first-child) {
-        border-top: 1px solid $gray-500;
-      }
-
-      ul {
-        margin-top: 13px;
-        margin-bottom: 13px;
-        padding-left: 40px;
-
-        li {
-          margin-left: 15px;
-        }
-      }
-    }
-
-    .email-header {
-      max-width: unset;
-    }
-
-    .email-message-button-group {
-      @include custom-button-group();
-    }
-  }
-
-  .email-sender-avatar {
-    height: 64px;
-    width: 64px;
-    object-fit: cover;
-  }
-}
-
 .activity-quote {
   border-left: 2px solid lightgrey;
-  color: gray;
   padding-left: 0.25rem;
   font-style: italic;
   margin: 0.5rem 0 0 0;
@@ -89,4 +11,23 @@
     padding-right: 0;
     padding-left: 0;
   }
+}
+
+.form-control {
+  padding: 0.375rem 0.563rem;
+  @extend .font-medium;
+  text-overflow: ellipsis;
+
+  &:not(textarea):not(trix-editor) {
+    padding: 5px 9px;
+    height: 32px;
+  }
+}
+
+.badge {
+  border-color: var(--tblr-gray-200);
+}
+
+hr {
+  margin: 1rem 0;
 }
