--- a/app/assets/stylesheets/src/shared/_datagrid.scss
+++ b/app/assets/stylesheets/src/shared/_datagrid.scss
@@ -1,34 +1,3 @@
-table.datagrid {
-  margin-bottom: 0rem;
-
-  th,
-  td {
-    max-width: 320px;
-    color: $gray-900;
-  }
-
-  th.ordered,
-  td.ordered {
-    background-color: rgba(228, 228, 228, 0.3);
-
-    &.desc a.desc,
-    &.asc a.asc {
-      color: $red;
-    }
-  }
-
-  .links {
-    a ~ a {
-      @extend .ms-2;
-    }
-  }
-
-  .grid-column-35 {
-    min-width: 140px;
-    width: 140px;
-  }
-}
-
 .datagrid-filter {
   .grid-checkbox {
     min-height: 32px;
@@ -69,38 +38,35 @@ table.datagrid {
       min-width: 2.125rem;
       padding: 0.25rem 0.5rem;
       text-align: center;
-      border-color: $gray-500;
       background-clip: content-box;
     }
     &:not(.active) .page-link:hover {
-      background-color: $gray-100;
       text-decoration: none;
     }
     &.active .page-link {
-      color: $gray-900;
       font-weight: bold;
     }
-    &:not(.disabled) .page-link {
-      color: $blue;
-      &:hover {
-        color: $blue;
-      }
-    }
   }
 }
 
-.pagination .disabled span,
-.pagination .disabled a {
-  background-color: transparent;
-  color: $gray-600;
-}
-
-table.ats_positions_grid,
-table.ats_dashboard_positions_grid,
-table.tasks_grid,
-table.profile_tasks_grid {
-  td.status {
-    text-align: center;
-    width: 1rem;
+// The `-webkit` attributes are needed to support some older browsers
+.table-sort {
+  &:after {
+    -webkit-mask-image: $table-sort-bg-image;
+    mask-image: $table-sort-bg-image;
   }
+
+  &.asc:after {
+    -webkit-mask-image: $table-sort-asc-bg-image;
+    mask-image: $table-sort-asc-bg-image;
+  }
+
+  &.desc:after {
+    -webkit-mask-image: $table-sort-desc-bg-image;
+    mask-image: $table-sort-desc-bg-image;
+  }
+}
+.grid-column-35 {
+  min-width: 140px;
+  width: 140px;
 }
