--- a/app/assets/stylesheets/src/shared/_navbar.scss
+++ b/app/assets/stylesheets/src/shared/_navbar.scss
@@ -1,91 +1,3 @@
-nav.header {
-  min-height: $navbar-min-height;
-  background-color: $navbar-bg;
-
-  .navbar-brand:hover {
-    opacity: 0.9;
-  }
-
-  .navbar-toggler {
-    border: none;
-  }
-
-  .nav-link {
-    color: $navbar-text !important;
-    font-size: 1.125rem;
-    line-height: 1.5rem;
-    letter-spacing: 0.02em;
-
-    &:hover {
-      text-shadow:
-        -0.06ex 0 $navbar-text,
-        0.06ex 0 $navbar-text;
-    }
-  }
-
-  .nav-notify-btn {
-    color: $navbar-text;
-  }
-
-  .nav-link-selected {
-    text-shadow:
-      -0.06ex 0 $navbar-text,
-      0.06ex 0 $navbar-text;
-  }
-
-  .nav-item {
-    .btn:focus {
-      box-shadow: none;
-    }
-  }
-
-  li.login {
-    text-align: left;
-    display: flex;
-    align-items: center;
-
-    @include media-breakpoint-up(md) {
-      gap: 0.5rem;
-    }
-
-    @include media-breakpoint-down(md) {
-      flex-direction: column;
-      align-items: stretch;
-    }
-  }
-
-  .dropdown-menu {
-    background-color: $navbar-bg;
-    border: 0;
-
-    @include media-breakpoint-down(lg) {
-      margin-top: 0px;
-      &:not(.dropdown-menu-end) {
-        padding: 0 1rem;
-      }
-    }
-  }
-  .dropdown-item {
-    font-size: 1.125rem;
-    line-height: 1.688rem;
-    &,
-    &:focus {
-      color: $navbar-text;
-    }
-  }
-  .dropdown-divider {
-    border-top: 1px solid #e9ecef;
-  }
-  .dropdown-item:hover,
-  .dropdown-item:focus,
-  .dropdown-item.active {
-    text-shadow:
-      -0.06ex 0 $navbar-text,
-      0.06ex 0 $navbar-text;
-    background-color: $navbar-bg;
-  }
-}
-
 #navbar-toggler {
   max-width: 100%;
 }
@@ -102,15 +14,37 @@ body {
   }
 }
 
-footer {
-  .nav-link {
-    transition: none;
-    &:hover {
-      color: #fff;
+.navbar {
+  --tblr-navbar-padding-x: 1.5rem;
+
+  &.header .navbar-toggler {
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+
+  .navbar-nav .nav-link .badge {
+    position: inherit;
+    transform: none;
+  }
+
+  @include media-breakpoint-down(lg) {
+    .nav-item.active {
+      .nav-link {
+        color: var(--tblr-primary);
+      }
     }
   }
-}
 
-.navbar {
-  --bs-navbar-padding-x: 24px;
+  .account-icon-dropdown {
+    min-width: 100%;
+
+    .nav-item {
+      white-space: nowrap;
+      padding: var(--tblr-dropdown-item-padding-y) var(--tblr-dropdown-item-padding-x);
+
+      &.active:after {
+        content: none;
+      }
+    }
+  }
 }
