--- a/app/views/ats/candidates/activities_tab.html.slim
+++ b/app/views/ats/candidates/activities_tab.html.slim
@@ -1,7 +1,7 @@
 = render "ats/candidates/profile" do
   .row.mt-3
     .col
-      ul#activities.list-group.text-break
+      ul#activities.list-group.text-break.bg-white
         - @all_activities.each do |event|
           = candidate_display_activity(event)
       .mt-3 = paginate(@all_activities, theme: "ats")
