--- a/app/views/ats/members/_member_element.html.slim
+++ b/app/views/ats/members/_member_element.html.slim
@@ -1,3 +1,3 @@
-div
-  = picture_avatar_icon member.account.avatar, {}, class: "small-avatar-thumbnail me-2"
+.hstack.gap-2
+  = picture_avatar_icon member.account.avatar, size: "xs"
   = member.name
