--- a/app/views/ats/positions/pipeline_tab.html.slim
+++ b/app/views/ats/positions/pipeline_tab.html.slim
@@ -1,85 +1,131 @@
 ruby:
   status_labels = {}
   mobile_status_labels = {}
-  qualified = params[:pipeline_tab] == "qualified"
 
 / DESKTOP
 - status_labels["qualified"] = capture
   | Qualified
-  span.badge.badge-sm.status-counter.ms-2 [
-      class=(params[:pipeline_tab].blank? || qualified ? "bg-light text-secondary" : "bg-secondary")]
-    #turbo_position_pipeline_qualified_status_counter
+  span
+    span.badge.status-counter#turbo_position_pipeline_qualified_status_counter
       = @qualified_count
 - status_labels["reserved"] = capture
   | Reserved
-  span.badge.badge-sm.status-counter.ms-2 [
-      class=(params[:pipeline_tab] == "reserved" ? "bg-light text-secondary" : "bg-secondary")]
-    #turbo_position_pipeline_reserved_status_counter
-      = @reserved_count
+  span
+    span.badge.status-counter#turbo_position_pipeline_reserved_status_counter
+        = @reserved_count
 - status_labels["disqualified"] = capture
   | Disqualified
-  span.badge.badge-sm.status-counter.ms-2 [
-      class=(params[:pipeline_tab] == "disqualified" ? "bg-light text-secondary" : "bg-secondary")]
-    #turbo_position_pipeline_disqualified_status_counter
+  span
+    span.badge.status-counter#turbo_position_pipeline_disqualified_status_counter
       = @disqualified_count
 / MOBILE
 - mobile_status_labels["qualified"] = capture
   | Qualified
-  span.badge.badge-sm.status-counter.ms-2 class="bg-secondary"
-    #turbo_position_pipeline_qualified_mobile_status_counter
+  span
+    span.badge.status-counter#turbo_position_pipeline_qualified_mobile_status_counter
       = @qualified_count
 - mobile_status_labels["reserved"] = capture
   | Reserved
-  span.badge.badge-sm.status-counter.ms-2 class="bg-secondary"
-    #turbo_position_pipeline_reserved_mobile_status_counter
+  span
+    span.badge.status-counter#turbo_position_pipeline_reserved_mobile_status_counter
       = @reserved_count
 - mobile_status_labels["disqualified"] = capture
   | Disqualified
-  span.badge.badge-sm.status-counter.ms-2 class="bg-secondary"
-    #turbo_position_pipeline_disqualified_mobile_status_counter
+  span
+    span.badge.status-counter#turbo_position_pipeline_disqualified_mobile_status_counter
       = @disqualified_count
 
 = render "ats/positions/profile"
   #pipeline-placements.mt-3
     / STATUS NAVIGATION
-    .row.g-3.align-items-center
-      .col-auto
+    .row.align-items-center.row-gap-3
+      .col-12.col-sm-auto
         / DESKTOP
-        .btn-group.d-none.d-md-block aria-label="Candidate status" role="group"
-          a.btn [class=(params[:pipeline_tab].blank? || qualified ? "btn-secondary" : "btn-light")
-                 href=tab_ats_position_path(@position.id, :pipeline, assigned_only: params[:assigned_only])]
+        .btn-group.shadow-none.d-none.d-sm-block aria-label="Candidate status" role="group"
+          = render ButtonLinkComponent.new( \
+                     tab_ats_position_path( \
+                       @position.id,
+                       :pipeline,
+                       assigned_only: params[:assigned_only],
+                     ),
+                     variant: :cancel,
+                     class: ("active" if params[:pipeline_tab].blank?),
+                   )
             = status_labels["qualified"]
-          a.btn [class=(params[:pipeline_tab] == "reserved" ? "btn-secondary" : "btn-light")
-                 href="#{tab_ats_position_path(
-                   @position.id, :pipeline, pipeline_tab: "reserved", assigned_only: params[:assigned_only])}"]
+          = render ButtonLinkComponent.new( \
+                     tab_ats_position_path( \
+                       @position.id,
+                       :pipeline,
+                       pipeline_tab: :reserved,
+                       assigned_only: params[:assigned_only],
+                     ),
+                     variant: :cancel,
+                     class: ("active" if params[:pipeline_tab] == "reserved"),
+                   )
             = status_labels["reserved"]
-          a.btn [class=(params[:pipeline_tab] == "disqualified" ? "btn-secondary" : "btn-light")
-                 href="#{tab_ats_position_path(
-                   @position.id, :pipeline, pipeline_tab: "disqualified", assigned_only: params[:assigned_only])}"]
+          = render ButtonLinkComponent.new( \
+                     tab_ats_position_path( \
+                       @position.id,
+                       :pipeline,
+                       pipeline_tab: :disqualified,
+                       assigned_only: params[:assigned_only],
+                     ),
+                     variant: :cancel,
+                     class: ("active" if params[:pipeline_tab] == "disqualified"),
+                   )
             = status_labels["disqualified"]
         / MOBILE
-        button.btn.btn-secondary.w-100.d-md-none.dropdown-toggle [
-            aria-expanded="false" aria-haspopup="true" data-bs-toggle="dropdown" type="button"]
+        = render ButtonComponent.new( \
+                   variant: :cancel,
+                   class: "d-sm-none dropdown-toggle",
+                   type: :button,
+                   aria: { expanded: false, haspopup: true },
+                   data: { bs_toggle: :dropdown },
+                 )
           = status_labels[params[:pipeline_tab] || "qualified"]
         ul.dropdown-menu
           li
-            = link_to mobile_status_labels["qualified"],
-                      tab_ats_position_path(@position.id, :pipeline, assigned_only: params[:assigned_only]),
-                      class: "dropdown-item"
+            = render ButtonLinkComponent.new( \
+                       tab_ats_position_path( \
+                         @position.id,
+                         :pipeline,
+                         assigned_only: params[:assigned_only],
+                       ),
+                       variant: :custom,
+                       flex_content_position: :start,
+                       class: "dropdown-item",
+                     )
+              = mobile_status_labels["qualified"]
           li
-            = link_to mobile_status_labels["reserved"],
-                      tab_ats_position_path( \
-                        @position.id, :pipeline, pipeline_tab: "reserved", assigned_only: params[:assigned_only]),
-                      class: "dropdown-item"
+            = render ButtonLinkComponent.new( \
+                       tab_ats_position_path( \
+                         @position.id,
+                         :pipeline,
+                         pipeline_tab: :reserved,
+                         assigned_only: params[:assigned_only],
+                       ),
+                       variant: :custom,
+                       flex_content_position: :start,
+                       class: "dropdown-item",
+                     )
+              = mobile_status_labels["reserved"]
           li
-            = link_to mobile_status_labels["disqualified"],
-                      tab_ats_position_path( \
-                        @position.id, :pipeline, pipeline_tab: "disqualified", assigned_only: params[:assigned_only]),
-                      class: "dropdown-item"
+            = render ButtonLinkComponent.new( \
+                       tab_ats_position_path( \
+                         @position.id,
+                         :pipeline,
+                         pipeline_tab: :disqualified,
+                         assigned_only: params[:assigned_only],
+                       ),
+                       variant: :custom,
+                       flex_content_position: :start,
+                       class: "dropdown-item",
+                     )
+              = mobile_status_labels["disqualified"]
 
       - if allowed_to?(:assign_only?)
         .col-sm-auto.ms-auto
-          = form_tag tab_ats_position_path(@position.id, :pipeline), method: :get, class: "form-check"
+          = form_tag tab_ats_position_path(@position.id, :pipeline), method: :get, class: "form-check mb-0"
             - if params[:pipeline_tab]
               = hidden_field_tag :pipeline_tab, params[:pipeline_tab]
             = check_box_tag :assigned_only, "true", params[:assigned_only], class: "form-check-input"
@@ -92,7 +138,7 @@ ruby:
             id="dropdownNavLink" data-bs-toggle="dropdown"]
           span.hstack.gap-2 data-pipeline-column-target="dropdownPlaceholder"
               => @stages.first
-              span.badge.badge-sm.bg-secondary class="turbo_position_pipeline_#{@stages.first}_stage_counter"
+              span.badge class="turbo_position_pipeline_#{@stages.first}_stage_counter"
                 = @grouped_placements[@stages.first][:count]
         ul.dropdown-menu.w-100
           - @stages.each_with_index do |stage, index|
@@ -104,18 +150,18 @@ ruby:
                            action: "click->pipeline-column#mobileStageDropdownPlaceholder",
                          }
                  => stage
-                 span.badge.badge-sm.bg-secondary class="turbo_position_pipeline_#{stage}_stage_counter"
+                 span.badge class="turbo_position_pipeline_#{stage}_stage_counter"
                    = @grouped_placements[stage][:count]
 
     #pipeline-body.mt-3
       .scroll-sm.pipeline-body-column
-        .tab-content.d-flex
+        .tab-content.d-flex.gap-sm-3
           - @stages.each_with_index do |stage, index|
             ruby:
               # rubocop:disable Lint/UselessAssignment
               column_status = @grouped_placements[stage][:count] < @placement_limit ? "noMore" : "probablyMore"
               # rubocop:enable Lint/UselessAssignment
-            .tab-pane.fade.d-sm-block.show-sm.w-100.rounded.p-sm-2.me-sm-3.mb-sm-1.pipeline-column [
+            .tab-pane.fade.d-sm-block.show-sm.w-100.p-sm-2.mb-sm-1.pipeline-column [
               aria-labelledby="#{stage}-tab"
               class="#{index.zero? ? 'show active' : ''}"
               data-controller="pipeline-column"
@@ -138,7 +184,7 @@ ruby:
                                   order: :last_activity,
                                 },
                               )
-                    span.badge.badge-sm.bg-secondary.pipeline-stage-counter.ms-2 [
+                    span.badge.pipeline-stage-counter.ms-2 [
                       class="turbo_position_pipeline_#{stage}_stage_counter"]
                       = @grouped_placements[stage][:count]
               .column-scroll-sm [data-action="scroll->pipeline-column#loadMore"
