--- a/app/views/ats/tasks/_change_status_control.html.slim
+++ b/app/views/ats/tasks/_change_status_control.html.slim
@@ -5,9 +5,10 @@
             class: "turbo-instant-submit d-inline-block",
             data: { "tasks-target" => "changeStatusForm" } do |f|
   = hidden_field_tag :grid, grid
-  .form-check class=("task-overdue-checkbox" if task.overdue?)
+  .form-check.mb-0
     = f.check_box :status,
-                  { class: "form-check-input current", id: dom_id(task, :grid_status) },
+                  { class: ["form-check-input", "current", *("border-danger" if task.overdue?)],
+                    id: dom_id(task, :grid_status) },
                   "closed", "open"
     label.form-check-label for=dom_id(task, :grid_status)
     = f.check_box :status,
