--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,4 +1,4 @@
-footer.pt-2.bg-dark
+footer.pt-2
   .container-fluid.h-100.d-flex.justify-content-lg-start.justify-content-center
     .d-flex.align-items-center
-      b.text-white-50 = t("footer.copyright", current_year: Time.zone.today.year)
+      = t("footer.copyright", current_year: Time.zone.today.year)
