--- a/app/views/layouts/ats/application.html.slim
+++ b/app/views/layouts/ats/application.html.slim
@@ -36,8 +36,8 @@ html
       = javascript_include_tag "recaptcha"
       - onload = "&onload=onGrecaptchaLoad"
       script[defer="true" src="https://www.google.com/recaptcha/api.js?render=#{RecaptchaV3::SITE_KEY}#{onload}"]
-  body data-controller="alerts"
-    .wrapper.bg-white id=@page_id
+  body
+    .wrapper id=@page_id
       = render "layouts/ats/navbar"
       main.container-fluid
         = render partial: "shared/notification"
