Fixed badge styles for navbar tasks counter (#184)

--- a/app/views/ats/tasks/_navbar_counter.html.slim
+++ b/app/views/ats/tasks/_navbar_counter.html.slim
@@ -2,5 +2,4 @@
 
 span.d-inline-flex id="turbo_navbar_tasks_counter"
   - if pending_tasks_count&.positive?
-    span.badge.bg-light.text-dark
-      = pending_tasks_count
+    span.badge = pending_tasks_count
