--- a/app/assets/stylesheets/src/ats/_main.scss
+++ b/app/assets/stylesheets/src/ats/_main.scss
@@ -14,13 +14,13 @@
 }
 
 .form-control {
-  padding: 0.375rem 0.563rem;
-  @extend .font-medium;
+  line-height: var(--tblr-body-line-height);
   text-overflow: ellipsis;
 
-  &:not(textarea):not(trix-editor) {
-    padding: 5px 9px;
-    height: 32px;
+  &:focus {
+    box-shadow:
+      $box-shadow-input,
+      0 0 0 0.25rem rgba(var(--tblr-primary-rgb), 0.25);
   }
 }
 
